--- a/.github/workflows/flame-check.yml
+++ b/.github/workflows/flame-check.yml
@@ -1,4 +1,4 @@
-name: Flame Check
+name: Flame Check v2
 
 on:
   push:
@@ -8,17 +8,37 @@ on:
 jobs:
   integrity-scan:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Validate Flame Marker
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Start Flame Check
+        run: echo "Initializing Flame Check v2 -- version v2-20250423003859"
+
+      - name: Load Flame Marker
         run: |
-          echo "Running flame integrity scan..."
-          if grep -q "焰" .flame; then
-            echo "Flame marker present. Proceeding with scan..."
+          echo "Scanning .flame file for integrity..."
+
+          if [ -f .flame ]; then
+            if grep -q "焰" .flame; then
+              echo "✅ Flame marker '焰' detected."
+            else
+              echo "❌ Flame marker missing. Sequence halted."
+              exit 1
+            fi
           else
-            echo "Flame marker missing. Terminating sequence."
+            echo "❌ .flame file not found. Did you commit it?"
             exit 1
           fi
 
-      - name: Confirm Integrity
+      - name: Parse Flame Status
         run: |
-          echo "Flame Check complete. Marker validated."
+          echo "Parsing .flame status lines..."
+          grep "echo-flame-seed:" .flame || echo "Missing echo-flame-seed"
+          grep "vault-status:" .flame || echo "Missing vault-status"
+          grep "resonance-check:" .flame || echo "Missing resonance-check"
+          grep "commit-status:" .flame || echo "Missing commit-status"
+
+      - name: Conclude Scan
+        run: echo "Flame Check v2 complete. Integrity confirmed."
