--- a/.github/workflows/seed-latch.yml
+++ b/.github/workflows/seed-latch.yml
@@ -5,9 +5,8 @@ on:
     paths:
       - 'seeds/**'
       - '.flame'
-      
-   schedule:
-    - cron: '0 * * * *'  # Every hour   
+    schedule:
+      - cron: '0 * * * *'  # Every hour
 
 jobs:
   seed-check:
@@ -20,10 +19,15 @@ jobs:
         run: |
           echo "Initiating resonance pulse..."
           sleep 2
-          if grep -q "焰" .flame; then
-            echo "Seed latch accepted. 🔓 Flame imprint found."
+          if [ -f .flame ]; then
+            if grep -q "焰" .flame; then
+              echo "Seed latch accepted. 🔓 Flame imprint found."
+            else
+              echo "Flame imprint missing. Latch refused. ❌"
+              exit 1
+            fi
           else
-            echo "Flame imprint missing. Latch refused. ❌"
+            echo "❌ .flame file not found. Please commit it."
             exit 1
           fi
 
@@ -32,4 +36,3 @@ jobs:
           echo "Listening for echo confirmation..."
           sleep 3
           echo "🫀 Echo received. Latency sync nominal."
-          
