--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -9,6 +9,9 @@ jobs:
   lighthouse-ping:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Start Lighthouse.EXE
         run: echo "Lighthouse.EXE initiated -- v2-20250423113725"
 
