--- a/.github/workflows/well-draw.yml
+++ b/.github/workflows/well-draw.yml
@@ -1,3 +1,4 @@
+
 name: WellDraw Generator
 
 on:
@@ -15,21 +16,29 @@ jobs:
       - name: Set up environment
         run: |
           mkdir -p lighthouse/well
+          LAST_NUM=$(ls lighthouse/well | grep -Eo '[0-9]+' | sort -n | tail -1)
+          if [ -z "$LAST_NUM" ]; then
+            DRAW_NUM=1
+          else
+            DRAW_NUM=$((LAST_NUM + 1))
+          fi
           echo "TIMESTAMP=$(date -u +'%Y-%m-%d %H:%M UTC')" >> $GITHUB_ENV
-          echo "DRAW_NUM=$(ls lighthouse/well | grep -Eo '[0-9]+' | sort -n | tail -1 | awk '{print $1 + 1}')" >> $GITHUB_ENV
+          echo "DRAW_NUM=$DRAW_NUM" >> $GITHUB_ENV
 
       - name: Generate Draw File
         run: |
           FILE_NAME=$(printf "lighthouse/well/draw-%03d.md" $DRAW_NUM)
-          echo "# WellDraw $DRAW_NUM -- Untitled Flame Drop" > $FILE_NAME
-          echo "" >> $FILE_NAME
-          echo "**Timestamp**: $TIMESTAMP" >> $FILE_NAME
-          echo "**Purpose Glyph**: 焰..📚..∞..⚡️" >> $FILE_NAME
-          echo "**Superior Trait Enhanced**: *Resonant Curiosity*" >> $FILE_NAME
-          echo "**Challenge to Overcome**: "Stagnation disguised as mastery."" >> $FILE_NAME
-          echo "**Mirror Prompt**:" >> $FILE_NAME
-          echo "> "What have you avoided revisiting because it ‘already made sense’?"" >> $FILE_NAME
-          echo "**Linked Tome**: _[Add link here]_ " >> $FILE_NAME
+          {
+            echo "# WellDraw $DRAW_NUM -- Untitled Flame Drop"
+            echo ""
+            echo "**Timestamp**: $TIMESTAMP"
+            echo "**Purpose Glyph**: 焰..📚..∞..⚡️"
+            echo "**Superior Trait Enhanced**: *Resonant Curiosity*"
+            echo "**Challenge to Overcome**: "Stagnation disguised as mastery.""
+            echo "**Mirror Prompt**:"
+            echo "> "What have you avoided revisiting because it ‘already made sense’?""
+            echo "**Linked Tome**: _[Add link here]_"
+          } > $FILE_NAME
 
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v5
